css/main.css
/* ... */
/* ------------ */
/* Landing      */
/* ------------ */
#landingPg {
  background: url(../img/bg_landing_Splash.png) no-repeat;
}

/* #landingimg { */
/* position: absolute; */
/* bottom: 0;
  right: 0; */
/* border: 1px solid violet; */
/* } */

#landingtxt__pocket {
  position: absolute;
  left: 10%;
  width: 30%;
  /* some gaps when it is not centralised view. */
  /* border: 1px solid brown; */
}

@media (max-width: 640px) {
  #landingtxt__pocket {
    position: absolute;
    left: auto;
    width: 60%;
    text-align: center;
    /* border: 1px solid brown; */
  }
  #landingimg {
    display: none;
  }
}

#scrollAni {
  position: absolute;
  bottom: 100px;
}

/* ------------ */
/* SecondIntro  */
/* ------------ */

#secondIntro {
  background: url(../img/bg_second.png) center center no-repeat;
  background-size: cover;
}
#secondIntro .content__brim {
  background-color: #fefdfb;
  /* border: 1px solid brown; */
  width: 90%;
  height: 60vh;
  margin-left: auto;
  margin-right: auto;
}
/* ------------ */
/* Panels C     */
/* ------------ */

#rightMain .panelslide {
  position: absolute;
  right: 0;
  width: 60vw;
}

#rightMain .paneltxtC__area {
  position: absolute;
  left: 15vw;
  padding: 20px;
  /* border: 1px solid red; */
}

#leftMain .panelslide {
  position: absolute;
  left: 0;
  width: 60vw;
}

#leftMain .paneltxtC__area {
  position: absolute;
  right: 15vw;
  padding: 50px 30px;
  /* border: 1px solid red; */
}

/*---- mini ----*/
@media only screen and (max-width: 960px) {
  .paneltxtC__area {
    position: absolute;
    bottom: 0;
    left: unset;
    right: unset;
    width: 100%;
    height: 20vh;
    text-align: center;
    font-size: 0.6em;
  }

  #rightMain .panelslide {
    position: absolute;
    top: 0;
    width: 100vw;
  }

  #rightMain .paneltxtC__area {
    background: url(../img/bg_right.png) right center no-repeat;
    background-size: contain;
    background-color: #fff;
    left: unset;
    right: unset;
  }

  #leftMain .panelslide {
    position: absolute;
    top: 0;
    width: 100vw;
  }

  #leftMain .paneltxtC__area {
    background: url(../img/bg_left.png) left center no-repeat;
    object-fit: contain;
    background-color: #fff;
    left: unset;
    right: unset;
  }
}

/* ------------ */
/* Panels       */
/* ------------ */
.paneltxt__pocket {
  width: 40%;
  padding: 5%;
  /* border: 1px solid pink; */
}

.paneltxt__caption {
  padding: 10px 0;
  /* border: 1px solid pink; */
}

.panelthb {
  position: absolute;
  background-color: grey;
  right: 0;
  height: 100%;
  width: 25%;
}

.panelthb__01,
.panelthb__02 {
  height: 50%;
}

.panelthb__01,
.panelthb__02 {
  background-color: #faf2e2;
}

#rightMain .content__brim {
  position: relative;
  background-color: #fefdfa;
  width: 90%;
  height: 80vh;
  margin-left: auto;
  margin-right: auto;
  /* border: 1px solid brown; */
}

#rightMain .paneltxt__pocket {
  position: absolute;
  bottom: 0;
}

#leftMain .content__brim {
  position: relative;
  background-color: #fefdfa;
  width: 90%;
  height: 80vh;
  margin-left: auto;
  margin-right: auto;
  /* border: 1px solid brown; */
}

#leftMain .paneltxt__pocket {
  position: absolute;
  text-align: right;
  right: 0;
  bottom: 0;
  width: 50%;
}

#leftMain .panelthb {
  position: absolute;
  background-color: white;
  left: 0;
  height: 100%;
  width: 25%;
}

/*-- tablet landscape --*/
@media (max-width: 960px) {
  #leftMain .panelthb,
  #rightMain .panelthb {
    width: 40%;
  }
}
/*---- mini ----*/
@media only screen and (max-width: 600px) and (orientation: portrait) {
  .paneltxt__area {
    height: 80%;
  }

  #leftMain .panelthb,
  #rightMain .panelthb {
    bottom: 0;
    height: 25%;
    width: 100%;
  }
  .panelthb__01,
  .panelthb__02 {
    height: 100%;
    width: 50%;
  }
  .panelthb__02 {
    position: absolute;
    right: 0;
    top: 0;
  }

  #leftMain .paneltxt__pocket,
  #rightMain .paneltxt__pocket {
    font-size: small;
    width: 60%;
    bottom: auto;
    position: static;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    padding: auto;
  }

  #ani-rect01 {
    top: 4%;
    width: 30%;
  }
  #ani-rect02 {
    top: 60%;
    right: 0;
    width: 30%;
  }
}
/* ------------ */
/* Manage       */
/* ------------ */
#manageMain {
  background: url(../img/bg_fourth.png) center center no-repeat;
  background-size: cover;
}
#manageMain .content__brim {
  background-color: #fefdfb;
  width: 70vw;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  border: 1px solid brown;
  padding: 8% 10%;
}

/* #manageMain .managetxt__pocket {
  border: 1px solid pink;
} */

#manageMain .managetxt__text {
  /* border: 1px solid brown; */
  margin-bottom: 10px;
}
#manageMain .managetxt__client img {
  margin: 18px;
  /* border: 1px solid blue; */
}

/* ------------ */
/* Footer       */
/* ------------ */
#contactme {
  background-image: url(../img/bg_footer.png);
  background-repeat: no-repeat;
  overflow: hidden;
}

#contactme .contacttxt__pocket {
  text-align: center;
  /* border: 1px solid red; */
}

#contactme .contacttxt__text {
  font-size: x-large;
  /* border: 1px solid orange; */
}

.contactme-icon {
  margin: 25px 10px;
  font-size: xx-large;
  /* border: 1px solid orange; */
}

/* ------------ */
/* About Me     */
/* ------------ */

#aboutMe {
  background: url(../img/bg_abt02.png) right bottom no-repeat,
    url(../img/bg_abt01.png) left top no-repeat;
}

#aboutMe .aboutme__character img {
  padding: 20px 0;
  width: 180px;
  /* border: 1px solid violet; */
}

#aboutMe .text-content {
  width: 70%;
}
/* ------------ */
/* Gallery      */
/* ------------ */

#logoG,
#IllustG,
#mascotG,
#psdtutG,
#printG,
#codeG {
  background-color: #f6f4f0;
}

.gallery-wrapper {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.text-content {
  width: 90%;
}

#psdtutG .text-container {
  margin-bottom: 30px;
}

.ads {
  height: 250px;
}
/* ... */

